# RustModel

./: .gitignore  Cargo.toml  README.md  demo.py  pyproject.toml
src/: errors.rs  field.rs  lib.rs  model_data.rs  model_validator.rs  validators.rs
