[package]
name = "fastmodel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fastmodel"
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8.11"
pyo3 = { version = "0.22.0" }
serde = "1.0.204"
serde_json = "1.0.122"
smallvec = "1.13.2"
